It's now possible to communicate with beacons

--- a/GPSLocationExtension/.project
+++ b/GPSLocationExtension/.project
@@ -3,6 +3,7 @@
 	<name>GPSLocationExtension</name>
 	<comment></comment>
 	<projects>
+		<project>estifuck</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
