--- a/GPSLocationExtension/AndroidManifest.xml
+++ b/GPSLocationExtension/AndroidManifest.xml
@@ -4,16 +4,26 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="19"
         android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="false" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:allowBackup="true" >
+        <service
+            android:name="com.estimote.sdk.service.BeaconService"
+            android:exported="false" />
+         <activity
+            android:name="com.estimote.sdk.DefaultRequirementsCheckerCallback$Activity" />
+        <receiver android:name="com.estimote.sdk.service.BeaconService$ScanAlarmBroadcastReceiver" />
     </application>
 
 </manifest>
