--- a/GPSLocationExtension/project.properties
+++ b/GPSLocationExtension/project.properties
@@ -11,4 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-23
+target=android-21
+sdk-build-tools=20.0.0
+android.library.reference.1=../../../workspace/estifuck
