--- a/GPSLocationExtension/project.properties
+++ b/GPSLocationExtension/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-21
 sdk-build-tools=20.0.0
-android.library.reference.1=../../../workspace/estifuck
+android.library.reference.1=../../../../../Mine mottatte filer/EstimoteSDKLibrary
